<resources>
    <string name="app_name">Spygram</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Spygram</string>
    <string name="action_settings">Settings</string>
    <string name="menu_key">Set Key</string>
    <string name="menu_followers">Followers</string>
    <string name="menu_following">Followings</string>
    <string name="menu_story_reels">Story reels</string>
    <string name="menu_send">Send</string>
    <string name="menu_download_by_link">Download by link</string>
    <string name="menu_download_how_to">How to download</string>
    <string name="url_host">https://i.instagram.com</string>
    <string name="path_get_followers">/api/v1/friendships/%s/followers/</string>
    <string name="path_get_followings">/api/v1/friendships/%s/following/</string>
    <string name="path_get_story">/api/v1/feed/user/%s/story/</string>
    <string name="path_logout">/api/v1/accounts/logout/</string>
    <string name="path_login">/api/v1/accounts/login/</string>
    <string name="path_login_2fa">/api/v1/accounts/two_factor_login/</string>
    <string name="path_reels_tray">/api/v1/feed/reels_tray/</string>
    <string name="content_type">Application/x-www-form-urlencoded</string>
    <string name="user_agent">Instagram 99.0.0.32.182 Android</string>
    <string name="url_pp_download">https://instadp-cors-222621.appspot.com/get-hd?id=</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="keyphrase">Keyphrase</string>
    <string name="set_keyphrase">Set Keyphrase</string>
    <string name="encryption_text">Your session will be stored locally \nand it should be encrypted.\nPlease set your keyphrase which you will be asked when you open app</string>
    <string name="_2fa_auth_code">2FA auth code</string>
    <string name="text_2fa">Seems like your account protected with 2FA.\nPlease enter verification code which you should receive within a few minutes</string>
    <string name="logout_str">Log out | Clear Session</string>
    <string name="banner_unit_id">ca-app-pub-2181561381492488/4184114792</string>
    <string name="native_ad_unit_id">ca-app-pub-2181561381492488/8025773996</string>
    <string name="ad_attribution">Ad</string>
    <string name="keyphrase_error_msg">Please check your keyphrase. It is incorrect</string>
    <string name="keyphrase_empty">Please enter your passphrase</string>
    <string name="keyphrase_wrong">Keyphrase you entered is incorrect</string>
    <string name="keyphrase_right">Correct keyphrase</string>
    <string name="version_check_error_msg">Could not check app version :(</string>
    <string name="new_version_available">A new version of this app is available. Please update it</string>
    <string name="msg_update_pls">Please Update the App</string>
    <string name="no_story">Can not access to stories of this user</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_confirm_msg">Are you sure you want to exit?</string>
    <string name="clear_session_msg">Login credentials will be removed. Are you sure?</string>
    <string name="clear_session_logout">Your session invalidated and destroyed</string>
    <string name="clear_session_destroy">Your session data removed</string>
    <string name="all_right">All right!</string>
    <string name="smth_wrong">Something went wrong :( Please try again</string>
    <string name="fields_empty">You did not enter mandatory fields</string>
    <string name="totp_not_supported">Unfortunately totp 2FA authentication not implemented yet :(</string>
    <string name="enter_ver_code">Please enter your verification code</string>
    <string name="net_err">Network error</string>
    <string name="download">Download</string>
    <string name="check_link_clipboard">Check clipboard</string>
    <string name="write_perm">WRITE permissions needed to download content</string>
    <string name="clipboard_not_valid">Clipboard does not contain valid download link</string>
    <string name="image_downloaded">Image %s downloaded. [%s]</string>
    <string name="video_downloaded">Video %s downloaded. [%s]</string>
    <string name="gen_error">General error occurred</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="phone_number">"Phone number: *****%s"</string>
    <string name="pp_downloaded">Profile photo of %s downloaded. [%s]</string>
    <string name="fail_login">Login failed!</string>
    <string name="challenge_req">You should register this device via challenge verification to Instagram account</string>
</resources>
