<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gredient"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="158dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/encryption_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic" />


    <EditText
        android:id="@+id/encryption_credential_text"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="14dp"
        android:background="#33FFFFFF"
        android:ems="10"
        android:hint="@string/keyphrase"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonsetkeyphraseEnc"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="193dp"
        android:background="#80FFFFFF"
        android:text="@string/set_keyphrase" />


</LinearLayout>