<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background_gredient"
    >

    <ImageView
        android:id="@+id/loginlayout_instagram_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/icon" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="#33FFFFFF"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="#33FFFFFF"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="#80FFFFFF"
        android:text="@string/sign_in" />



</LinearLayout>