<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2Fa"
            android:layout_width="292dp"
            android:layout_height="158dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_2fa"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/textView2fa_phonenumber"
            android:layout_width="277dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold|italic" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/editText_2fa"
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_marginBottom="14dp"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/_2fa_auth_code"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button2FaSendCode"
            android:layout_width="230dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_send" />

    </LinearLayout>
    <ViewAnimator
        android:id="@+id/progress_view_2fa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/black_300">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:indeterminate="true"
            android:theme="@style/AppTheme.Dark.Dialog"
            />
    </ViewAnimator>
</FrameLayout>